# laas

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements-image.txt  requirements-llama-cpu.txt  requirements-llama-cuda.txt  requirements-llama-hip-radeon.txt  requirements-llama-rocm.txt  requirements-llama-vulkan.txt  requirements-stt.txt  requirements-tts.txt  requirements-video.txt  requirements-voice.txt  requirements.txt
.github/ISSUE_TEMPLATE/: release_checklist.md
.github/workflows/: ci.yml
docs/: CONCURRENCY.md  GEMMA_MULTIMODAL.md  INSTALL.md  OPENAI_COMPATIBILITY.md  REALTIME.md  RELEASE.md
scripts/: concurrency_smoke.py  image_generation_smoke.py  make_inpaint_mask.py  multimodal_fidelity_smoke.py  native_llama_gemma4_mtp_benchmark.ps1  openai_client_smoke.py  probe_gemma4_12b_mtp.py  realtime_voice_smoke.py  tune_gemma4_context.py  video_generation_smoke.py
src/laas/: __init__.py  app.py  backends.py  compat_check.py  concurrency.py  diagnostics.py  embedding.py  errors.py  image.py  main.py  manager.py  multimodal.py  native.py  openai_compat.py  schemas.py  settings.py  storage.py  tools.py  transcription.py  tts.py  video.py
tests/: test_api.py  test_concurrency.py
tests/fixtures/openai_compat/: audio_speech.json  audio_transcriptions.json  audio_translations.json  chat_completion_text.json  chat_completion_tool.json  completions_text.json  embeddings_float.json  images_edits.json  images_generation.json  images_variations.json  models_list.json  responses_function_call.json  responses_text.json
