[project]
name = "laas"
version = "0.1.0"
description = "Local AI API Stack: an OpenAI-compatible local model API host."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "huggingface-hub>=0.25.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
llama = ["llama-cpp-python>=0.3.9"]
tts = [
    "kokoro-onnx>=0.5.0",
    "soundfile>=0.14.0",
]
video = ["opencv-python>=4.10.0"]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.0",
]

[project.scripts]
laas = "laas.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
